# unofficial-tg-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
apps/tg-cli/: Cargo.toml
apps/tg-cli/src/: main.rs
apps/tg-desktop/: Cargo.toml
apps/tg-desktop/src/: main.rs
crates/tg-app/: Cargo.toml
crates/tg-app/src/: lib.rs
crates/tg-core/: Cargo.toml
crates/tg-core/src/: lib.rs  telegram.rs  transfer.rs
crates/tg-tdlib/: Cargo.toml
crates/tg-tdlib/src/: lib.rs
crates/tg-transfer/: Cargo.toml
crates/tg-transfer/src/: lib.rs  mock.rs  planner.rs  runtime.rs
docs/: build.md  research.md
