[workspace]
members = [
    "crates/tg-core",
    "crates/tg-transfer",
    "crates/tg-tdlib",
    "crates/tg-app",
    "apps/tg-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
