[package]
name = "tg-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tg-core = { path = "../tg-core" }
tg-tdlib = { path = "../tg-tdlib" }
tg-transfer = { path = "../tg-transfer" }
